# vilokanam-view

./: CommunityAndGovernance.md  ContentModerationPlan.md  CreatorDashboardPlan.md  DeploymentStrategy.md  DevelopmentRoadmap.md  Dockerfile.api  PaymentSystemPlan.md  PerformanceOptimization.md  PerformanceOptimizationPlan.md  README.md  SearchDiscoveryPlan.md  SecurityAndCompliance.md  SocialFeaturesPlan.md  TechnicalArchitecture.md  TechnicalDocumentation.md  UserAuthPlan.md  UserExperienceDesign.md  ViewerInterfacePlan.md  WebRTCStreamingPlan.md  demo-design-system.bat  demo-design-system.sh  docker-compose.dev.yml  package-lock.json  package.json  run-tests.bat  run-tests.sh  setup-dev.bat  setup-dev.sh
Docs/: AnalyticsReportingPlan.md  CommunityAndSocialFeatures.md  CompletePlatformSummary.md  CompleteStreamingPlatformRoadmap.md  DatabaseSchema.md  DesignSystem.md  DesignSystemImplementation.md  DevelopmentSetup.md  DevelopmentSummary.md  FinalImplementationSummary.md  ImplementationSummary.md  MonetizationStrategy.md  PolkadotIntegration.md  ProjectOverview.docx  ProjectOverview.md  ProjectStructure.md  README.md  SecurityImplementationPlan.md  TestingGuide.md  VideoProcessingPipeline.md  VideoUploadPlan.md  Vilokanam-View Documentation.docx  WebRTCStreamingImplementation.md  vilokanam.docx
backend/: Cargo.toml
backend/api/: Dockerfile  index.js  package.json
backend/node/: Cargo.toml
backend/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
backend/ocw-ticker/: Cargo.toml
backend/ocw-ticker/src/: main.rs
backend/pallets/tick-stream/: Cargo.toml
backend/pallets/tick-stream/src/: Cargo.toml  lib.rs  mock.rs  rpc.rs  tests.rs
backend/runtime/: Cargo.toml
backend/runtime/src/: lib.rs
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
frontend/.turbo/cache/: 18b7fca16ae1f190-meta.json  18b7fca16ae1f190.tar.zst  1993911c10ae1a36-meta.json  1993911c10ae1a36.tar.zst  3591446db2fdb0c3-meta.json  3591446db2fdb0c3.tar.zst  3a10dcc4a6a6ffef-meta.json  3a10dcc4a6a6ffef.tar.zst  3cc26da94dd27876-meta.json  3cc26da94dd27876.tar.zst  4897bf01fd5ca273-meta.json  4897bf01fd5ca273.tar.zst  4aaafa4ee8c67a97-meta.json  4aaafa4ee8c67a97.tar.zst  4f2da344e2943ce6-meta.json  4f2da344e2943ce6.tar.zst  782eb551bbd29ca7-meta.json  782eb551bbd29ca7.tar.zst  7e7fbf5ed5dd6786-meta.json  7e7fbf5ed5dd6786.tar.zst  7ec8452b85a9abde-meta.json  7ec8452b85a9abde.tar.zst  ca57a612a46645cd-meta.json  ca57a612a46645cd.tar.zst  efdf6aed784366ac-meta.json  efdf6aed784366ac.tar.zst
frontend/apps/creator/: package.json  tsconfig.json
frontend/apps/creator/app/: layout.tsx  page.tsx
frontend/apps/creator/app/dashboard/: page.tsx
frontend/apps/viewer/: package.json  tailwind.config.js  tsconfig.json
frontend/apps/viewer/app/: layout.tsx  page.tsx
frontend/apps/viewer/src/app/: layout.tsx  page.tsx
frontend/apps/viewer/src/app/categories/: page.tsx
frontend/apps/viewer/src/app/streams/: page.tsx
frontend/apps/viewer/src/app/streams/[id]/: page.tsx
qwenchat/: errors.txt
signaling-server/: Dockerfile  index.js  package.json
