[workspace]
resolver = "2"
members = ["node", "runtime", "pallets/tick-stream", "ocw-ticker", "rpc-api"]

# override github deps to crates.io for the ones that break
[patch.crates-io]
sp-core           = { version = "28.0.0" }
sp-runtime        = { version = "28.0.0" }
sp-io             = { version = "28.0.0" }
frame-support     = { version = "28.0.0" }
frame-system      = { version = "28.0.0" }
sc-cli            = { version = "0.35.0" }
sc-service        = { version = "0.35.0" }
pallet-balances   = { version = "28.0.0" }
pallet-tick-stream = { version = "28.0.0" }
sc-executor       = { version = "0.35.0" }
sc-transaction-pool = { version = "0.35.0" }