[workspace]
members = [
    "node",
    "runtime",
    "pallets/tick-stream",
    "ocw-ticker",
]
resolver = "2"

[workspace.dependencies]
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
sp-runtime = { version = "31.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }

[profile.release]
panic = "unwind"