[package]
name = "vilokanam-node"
version = "0.1.0"
edition = "2021"

[dependencies]
clap          = { version = "4", features = ["derive"] }
sc-cli        = { version = "0.35.0" }
sc-service    = { version = "0.35.0" }
sc-executor   = { version = "0.35.0" }
sc-transaction-pool = { version = "0.35.0" }
sc-network    = { version = "0.35.0" }
sc-consensus-aura   = { version = "0.35.0" }
sc-consensus-grandpa = { version = "0.35.0" }
sp-core       = { version = "28.0.0" }
sp-runtime    = { version = "28.0.0" }
vilokanam-runtime = { path = "../runtime" }
tokio         = { version = "1", features = ["full"] }
serde_json    = "1"
serde         = { version = "1", features = ["derive"] }
sp-consensus-aura = { version = "0.35.0" }
sp-consensus-grandpa = { version = "0.35.0" }
sp-consensus = { version = "0.35.0" }