[package]
name = "vilokanam-node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

sc-cli = { version = "0.40.0" }
sc-client-api = "31.0.0"
sc-consensus-aura = "0.40.0"
sc-consensus-grandpa = "0.37.0"
sc-executor = "0.38.0"
sc-network = "0.39.0"
sc-service = "0.40.0"
sc-telemetry = "25.0.0"
sc-transaction-pool = "31.0.0"
sc-transaction-pool-api = "31.0.0"
sc-consensus = "0.40.0"
sc-sync-state-rpc = "0.40.0"

sp-consensus-aura = "0.39.0"
sp-consensus-grandpa = "25.0.0"
sp-core = "31.0.0"
sp-inherents = "31.0.0"
sp-keyring = "32.0.0"
sp-runtime = "31.0.0"
sp-timestamp = "30.0.0"

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.24.7", features = ["server"] }
sc-rpc = "31.0.0"
sc-rpc-api = "0.39.0"
sp-api = "31.0.0"
sp-block-builder = "31.0.0"
sp-blockchain = "31.0.0"
sc-basic-authorship = "0.40.0"

# Local dependencies
vilokanam-runtime = { path = "../runtime" }

# Benchmarking
frame-benchmarking = "31.0.0"
frame-benchmarking-cli = "31.0.0"

[build-dependencies]
substrate-build-script-utils = "11.0.0"