[package]
name = "ocw-ticker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
subxt = "0.38.0"
codec = { package = "parity-scale-codec", version = "3.6.12" }
sp-core = "31.0.0"
sp-runtime = "31.0.0"