[package]
name = "vilokanam-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
codec           = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info      = { version = "2.10", default-features = false, features = ["derive"] }
frame-support   = { version = "28.0.0", default-features = false }
frame-system    = { version = "28.0.0", default-features = false }
pallet-balances = { version = "28.0.0", default-features = false }
pallet-tick-stream = { path = "../pallets/tick-stream", default-features = false }
sp-runtime      = { version = "28.0.0", default-features = false }
sp-std          = { version = "28.0.0", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-tick-stream/std",
  "sp-runtime/std",
  "sp-std/std",
]