[package]
name = "vilokanam-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-executive = { version = "31.0.0", default-features = false }
frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "29.0.0", default-features = false }
frame-try-runtime = { version = "0.37.0", default-features = false, optional = true }

pallet-aura = { version = "30.0.0", default-features = false }
pallet-balances = { version = "43.0.0", default-features = false }
pallet-grandpa = { version = "31.0.0", default-features = false }
pallet-sudo = { version = "31.0.0", default-features = false }
pallet-timestamp = { version = "30.0.0", default-features = false }
pallet-transaction-payment = { version = "32.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "32.0.0", default-features = false }

sp-api = { version = "31.0.0", default-features = false }
sp-block-builder = { version = "31.0.0", default-features = false }
sp-consensus-aura = { version = "0.39.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-inherents = { version = "31.0.0", default-features = false }
sp-offchain = { version = "31.0.0", default-features = false }
sp-runtime = { version = "31.0.0", default-features = false }
sp-session = { version = "32.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }
sp-transaction-pool = { version = "31.0.0", default-features = false }
sp-version = { version = "33.0.0", default-features = false }

# Local dependencies
tick-stream = { path = "../pallets/tick-stream", default-features = false }

# Benchmarking
frame-benchmarking = { version = "31.0.0", default-features = false, optional = true }

[build-dependencies]
substrate-wasm-builder = { version = "23.0.0", optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-wasm-builder",
	"tick-stream/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"tick-stream/runtime-benchmarks",
]

try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"tick-stream/try-runtime",
]