[package]
name = "tick-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-support = { version = "31.0.0", default-features = false }
frame-system = { version = "31.0.0", default-features = false }
sp-core = { version = "31.0.0", default-features = false }
sp-runtime = { version = "31.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { version = "31.0.0", default-features = false, optional = true }

[dev-dependencies]
sp-io = "31.0.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-support/try-runtime",
]